applications/base/diagram-maker/diagram-maker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diagram-maker
  namespace: diagram-maker
spec:
  selector:
    app: diagram-maker
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
