applications/base/diagram-maker/diagram-maker-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: diagram-maker
  namespace: diagram-maker
spec:
  podSelector:
    matchLabels:
      app: diagram-maker
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - port: 3000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-prometheus-stack
      ports:
        - port: 3000
  egress: []
